sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: reassignment to val
			fin = fin - 1
                            ^